# gexiv2-sys

./: .travis.yml  CHANGELOG  CONTRIBUTING.md  Cargo.toml  README.md  SETUP.md  build.rs
.github/workflows/: ci.yml
examples/: open_buf.rs  preview_properties.rs  raw_tag_access.rs  xmp_packet_access.rs
src/: lib.rs  test.rs
